--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-elixir@v1
       with:
-        elixir-version: '1.11.2' # Define the elixir version [required]
-        otp-version: '23.2' # Define the OTP version [required]
+        otp-version: '23.2'
+        elixir-version: '1.11.2'
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
